Fix #120 Calendar icon is illegible in dark mode (Chrome)

--- a/src/css/themes/bulma.css
+++ b/src/css/themes/bulma.css
@@ -46,6 +46,14 @@
     --link-hover-color: #fff;
     --link-active-color: #fff;
   }
+
+  input[type="date"]::-webkit-calendar-picker-indicator,
+  input[type="datetime-local"]::-webkit-calendar-picker-indicator,
+  input[type="month"]::-webkit-calendar-picker-indicator,
+  input[type="time"]::-webkit-calendar-picker-indicator,
+  input[type="week"]::-webkit-calendar-picker-indicator {
+    filter: invert();
+  }
 }
 
 input {
